--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -258,7 +258,7 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Mechanics of Art of Combat Skills (Hidden Skills)</h2>
-            <img src="./img/hidden_skill_icon.png" alt="">
+            <img src="./img/hidden_skill_icon.png" alt="Hidden Skills icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
@@ -268,7 +268,7 @@
                 <span class="text-exotic-text-color">Exotic Item</span> regardless of the difficulty. Once accquired that skill will
                 automatically unlock in that specific Skill Tree.
             </p>
-            <img src="./img/hidden_skill_drop.png" alt="">
+            <img src="./img/hidden_skill_drop.png" alt="Full Hidden Skill item drop image">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
@@ -316,7 +316,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Dragon Fang</span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/sword_logo.png" alt="Sword icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
@@ -331,8 +331,8 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Izuna Drop</span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
-                        <img src="./img/fists_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/sword_logo.png" alt="Sword icon">
+                        <img class="w-[60px] h-auto" src="./img/fists_logo.png" alt="Fists icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
@@ -346,7 +346,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Kurama Sword Dance</span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/sword_logo.png" alt="Sword icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yoshitsune</a>
@@ -361,7 +361,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Reverse Impact</span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/sword_logo.png" alt="Sword icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Fujiwara no Chikata</a>
@@ -375,7 +375,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Severing Spin</span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/sword_logo.png" alt="Sword icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Minamoto no Yorimitsu</a>
@@ -389,7 +389,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>True And Through</span>
-                        <img src="./img/sword_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/sword_logo.png" alt="Sword icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Azai Nagamasa</a>
@@ -404,7 +404,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Dragon Claw</span>
-                        <img src="./img/dual_swords_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/dual_swords_logo.png" alt="Dual Swords icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
@@ -419,7 +419,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Double-Headed Slice</span>
-                        <img src="./img/dual_swords_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/dual_swords_logo.png" alt="Dual Swords icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
@@ -434,7 +434,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Punish The Proud</span>
-                        <img src="./img/dual_swords_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/dual_swords_logo.png" alt="Dual Swords icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
@@ -449,7 +449,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Ultimate Sign Of The Cross</span>
-                        <img src="./img/dual_swords_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/dual_swords_logo.png" alt="Dual Swords icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Tokichiro</a>
@@ -464,7 +464,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Bracing Breeze</span>
-                        <img src="./img/spear_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/spear_logo.png" alt="Spear icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
@@ -479,7 +479,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Triple Threat</span>
-                        <img src="./img/spear_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/spear_logo.png" alt="Spear icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Maeda Toshiie</a>
@@ -494,7 +494,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Spirit Storm</span>
-                        <img src="./img/axe_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/axe_logo.png" alt="Axe icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Obsidian Samurai</a>
@@ -508,7 +508,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Second Wind</span>
-                        <img src="./img/kusarigama_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/kusarigama_logo.png" alt="Kusarigama icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Hachisuka Koroku</a>
@@ -524,7 +524,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Water Drop</span>
-                        <img src="./img/kusarigama_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/kusarigama_logo.png" alt="Kusarigama icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Hachisuka Koroku</a>
@@ -540,7 +540,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Dragon Horn</span>
-                        <img src="./img/odachi_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/odachi_logo.png" alt="Odachi icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Saito Yoshitatsu</a>
@@ -555,7 +555,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Swirling Snow</span>
-                        <img src="./img/odachi_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/odachi_logo.png" alt="Odachi icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Magara Naotaka</a>
@@ -570,7 +570,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Storm of Strikes</span>
-                        <img src="./img/tonfa_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/tonfa_logo.png" alt="Tonfa icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Hattori Hanzo</a>
@@ -585,7 +585,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Deadly Spiral</span>
-                        <img src="./img/hatchets_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/hatchets_logo.png" alt="Hatchets icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Shibata Katsuie</a>
@@ -603,7 +603,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Arc Of Chaos</span>
-                        <img src="./img/switchglaive.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/switchglaive.png" alt="Switchglaive icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Tate Eboshi</a>
@@ -619,7 +619,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Fleeting Edge</span>
-                        <img src="./img/switchglaive.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/switchglaive.png" alt="Switchglaive icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Mumyo</a>
@@ -634,7 +634,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Windswept</span>
-                        <img src="./img/switchglaive.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/switchglaive.png" alt="Switchglaive icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Imagawa Yoshimoto</a>
@@ -649,7 +649,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Roar Power</span>
-                        <img src="./img/splitstaff.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/splitstaff.png" alt="Splitstaff icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Benkei</a>
@@ -664,7 +664,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Tiger Claws</span>
-                        <img src="./img/fists_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/fists_logo.png" alt="Fists icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
@@ -731,7 +731,7 @@
                 <tr class="bg-dark-gray-2">
                     <td rowspan="2"><div class="flex flex-col justify-center items-center gap-3">
                         <span>Brutal Combustion</span>
-                        <img src="./img/shiftling_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/shiftling_logo.png" alt="Shiftling icon">
                     </div></td>
                     <td><a class="text-sky-400 hover:text-sky-600" href="">Ancient Otakemaru</a></td>
                     <td>
@@ -751,7 +751,7 @@
                 <tr class="">
                     <td rowspan="2"><div class="flex flex-col justify-center items-center gap-3">
                         <span>Ferocious Gale</span>
-                        <img src="./img/shiftling_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/shiftling_logo.png" alt="Shiftling icon">
                     </div></td>
                     <td><a class="text-sky-400 hover:text-sky-600" href="">Ancient Otakemaru</a></td>
                     <td>
@@ -771,7 +771,7 @@
                 <tr class="bg-dark-gray-2">
                     <td rowspan="2"><div class="flex flex-col justify-center items-center gap-3">
                         <span>Phantasmic Burst</span>
-                        <img src="./img/shiftling_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/shiftling_logo.png" alt="Shiftling icon">
                     </div></td>
                     <td><a class="text-sky-400 hover:text-sky-600" href="">Ancient Otakemaru</a></td>
                     <td>
@@ -815,7 +815,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Flame Dragon</span>
-                        <img src="./img/ninjutsu_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/ninjutsu_logo.png" alt="Ninjutsu icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
@@ -829,7 +829,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Umbral Bullet</span>
-                        <img src="./img/ninjutsu_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/ninjutsu_logo.png" alt="Ninjutsu icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
@@ -843,7 +843,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Exorcist Blade</span>
-                        <img src="./img/ninjutsu_logo.png" alt="" class="w-[60px] h-auto">
+                        <img class="w-[60px] h-auto" src="./img/ninjutsu_logo.png" alt="Ninjutsu icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ren Hayabusa</a>
@@ -881,7 +881,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><div class="flex flex-col justify-center items-center gap-3">
                         <span>Luminous Blade Talisman</span>
-                        <img src="./img/onmyo_logo.png" alt="">
+                        <img src="./img/onmyo_logo.png" alt="Onmyo Magic icon">
                     </div></td>
                     <td>
                         <a class="text-sky-400 hover:text-sky-600" href="">Ashiya Doman</a>
