--- a/nioh2/tools/smithing_texts/misc_texts.html
+++ b/nioh2/tools/smithing_texts/misc_texts.html
@@ -57,7 +57,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -255,7 +255,7 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Mechanics of Smithing Texts and Drop Rates</h2>
-            <img src="./img/smithing_text_logo.png" alt="">
+            <img src="./img/smithing_text_logo.png" alt="Smiting Text icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
@@ -264,7 +264,7 @@
                 regardless of the difficulty. Once a Smithing Text is obtained the player can go to the Blacksmith &#10230; 
 				Forge to hand over the Smithing Text and unlock that specific piece of gear or item to forge.
             </p>
-            <img src="./img/smithing_text_drop.png" alt="">
+            <img src="./img/smithing_text_drop.png" alt="Smithing Text item drop full image">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
@@ -298,7 +298,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Miscellaneous Item Smithing Texts</h2>
-            <img src="./img/misc_logo.png" alt="">
+            <img src="./img/misc_logo.png" alt="Items icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
