--- a/nioh2/tools/tools_index.html
+++ b/nioh2/tools/tools_index.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -250,7 +250,7 @@
                 <!-- ==========
                 Smithing Texts (Button 1)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/smithing_texts_index.html">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Smithing Texts</span>
@@ -259,7 +259,7 @@
                 <!-- ==========
                 Temper Tables (Button 2)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Temper Tables</span>
@@ -268,7 +268,7 @@
                 <!-- ==========
                 Blacksmith (Button 3)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Blacksmith</span>
@@ -277,7 +277,7 @@
                 <!-- ==========
                 Stone of Penance (Button 4)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Stone of Penance</span>
@@ -286,7 +286,7 @@
                 <!-- ==========
                 Farming Resources (Button 5)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Farming Resources</span>
@@ -295,7 +295,7 @@
                 <!-- ==========
                 Achievements (Button 6)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Achievements</span>
@@ -304,7 +304,7 @@
                 <!-- ==========
                 Builds (Button 7)
                 ========== -->
-                <a class="group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Builds</span>
