--- a/nioh2/world/missions/recommended_missions.html
+++ b/nioh2/world/missions/recommended_missions.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -264,7 +264,7 @@
             </div>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                Below is a recommended list of missions to complete, seperated by each reagion. The main goal is to complete as 
+                Below is a recommended list of missions to complete, seperated by each region. The main goal is to complete as 
                 few missions as possible, as fast as possilbe so that the Last region is unlocked. Completing 
                 <a class="text-sky-400 hover:text-sky-600" href="">In The Eye of the Beholder</a> mission unlocks the next
                 difficulty, and is required. We want to select short and fast missions. Generally these missions will be gauntlet
@@ -281,8 +281,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region1" class="w-full flex flex-col justify-center">
+            <div id="region1" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Awakening Region (1st Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/awakening_region_logo.png" alt="Awakening Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
@@ -311,8 +312,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region2" class="w-full flex flex-col justify-center">
+            <div id="region2" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Soaring Region (2nd Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/soaring_region_logo.png" alt="Soaring Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
@@ -333,8 +335,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region3" class="w-full flex flex-col justify-center">
+            <div id="region3" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Shadow Region (3rd Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/shadow_region_logo.png" alt="Shadow Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
@@ -356,8 +359,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region4" class="w-full flex flex-col justify-center">
+            <div id="region4" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Dawn Region (4th Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/dawn_region_logo.png" alt="Dawn Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
@@ -377,8 +381,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region5" class="w-full flex flex-col justify-center">
+            <div id="region5" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Twilight Region (5th Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/twilight_region_logo.png" alt="Twilight Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
@@ -397,8 +402,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region6" class="w-full flex flex-col justify-center">
+            <div id="region6" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Dream Region (6th Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/dream_region_logo.png" alt="Dream Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
@@ -415,8 +421,9 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-16 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
-            <div id="region7" class="w-full flex flex-col justify-center">
+            <div id="region7" class="w-full flex flex-col items-center">
                 <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Afterglow Region (7th Region):</h2>
+                <img class="w-auto h-auto mb-2" src="./img/afterglow_region_logo.png" alt="Afterglow Region icon">
                 <hr class="w-full h-[2px] bg-stone-600 border-0">
             </div>
 
