--- a/nioh2/tools/smithing_texts/smithing_texts_index.html
+++ b/nioh2/tools/smithing_texts/smithing_texts_index.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -252,7 +252,7 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/hidden_skills.html">
-                    <img src="./img/hidden_skill_icon.png" alt="" class="h-[75px] w-auto">
+                    <img class="h-[75px] w-auto" src="./img/hidden_skill_icon.png" alt="Hidden Skills Skill Tree icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Hidden Skills</span>
                 </a>
@@ -262,7 +262,7 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/weapon_texts.html">
-                    <img src="./img/weapons_icon.png" alt="" class="my-auto">
+                    <img class="my-auto" src="./img/weapons_icon.png" alt="Weapons icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Weapon Smithing Texts</span>
                 </a>
@@ -272,7 +272,7 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/armor_texts.html">
-                    <img src="./img/armor_icon.png" alt="" class="my-auto">
+                    <img class="my-auto" src="./img/armor_icon.png" alt="Armor icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
                 </a>
@@ -282,7 +282,7 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/misc_texts.html">
-                    <img src="./img/misc_smithing_icon.png" alt="" class="my-auto">
+                    <img class="my-auto" src="./img/misc_smithing_icon.png" alt="Blacksmith Hammer icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
                 </a>
@@ -292,7 +292,7 @@
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="">
-                    <img src="./img/missions_logo.png" alt="" class="h-[75px] w-auto">
+                    <img class="h-[75px] w-auto" src="./img/missions_logo.png" alt="Main Mission icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Mission Progression Unlocks</span>
                 </a>
