--- a/nioh2/tools/smithing_texts/weapon_texts.html
+++ b/nioh2/tools/smithing_texts/weapon_texts.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -267,7 +267,7 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Mechanics of Smithing Texts and Drop Rates</h2>
-            <img src="./img/smithing_text_logo.png" alt="">
+            <img src="./img/smithing_text_logo.png" alt="Smithing Text icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
@@ -276,7 +276,7 @@
                 regardless of the difficulty. Once a Smithing Text is obtained the player can go to the Blacksmith &#10230; 
 				Forge to hand over the Smithing Text and unlock that specific piece of gear or item to forge.
             </p>
-			<img src="./img/smithing_text_drop.png" alt="">
+			<img src="./img/smithing_text_drop.png" alt="Smithing Text item drop full image">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
@@ -305,7 +305,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Katana Smithing Texts</h2>
-            <img src="./img/sword_logo.png" alt="">
+            <img src="./img/sword_logo.png" alt="Sword icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -843,7 +843,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Dual Swords Smithing Texts</h2>
-            <img src="./img/dual_swords_logo.png" alt="">
+            <img src="./img/dual_swords_logo.png" alt="Dual Swords icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -1227,7 +1227,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Spear Smithing Texts</h2>
-            <img src="./img/spear_logo.png" alt="">
+            <img src="./img/spear_logo.png" alt="Spear icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -1620,7 +1620,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Axe Smithing Texts</h2>
-            <img src="./img/axe_logo.png" alt="">
+            <img src="./img/axe_logo.png" alt="Axe icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -1870,7 +1870,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Kusarigama Smithing Texts</h2>
-            <img src="./img/kusarigama_logo.png" alt="">
+            <img src="./img/kusarigama_logo.png" alt="Kusarigama icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2092,7 +2092,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Odachi Smithing Texts</h2>
-            <img src="./img/odachi_logo.png" alt="">
+            <img src="./img/odachi_logo.png" alt="Odachi icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2351,7 +2351,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Tonfa Smithing Texts</h2>
-            <img src="./img/tonfa_logo.png" alt="">
+            <img src="./img/tonfa_logo.png" alt="Tonfa icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2576,7 +2576,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Hatchets Smithing Texts</h2>
-            <img src="./img/hatchets_logo.png" alt="">
+            <img src="./img/hatchets_logo.png" alt="Hatchets icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2777,7 +2777,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Switchglaive Smithing Texts</h2>
-            <img src="./img/switchglaive.png" alt="">
+            <img src="./img/switchglaive.png" alt="Switchglaive icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -2985,7 +2985,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Splitstaff Smithing Texts</h2>
-            <img src="./img/splitstaff.png" alt="">
+            <img src="./img/splitstaff.png" alt="Splitstaff icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -3176,7 +3176,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Fists Smithing Texts</h2>
-            <img src="./img/fists_logo.png" alt="">
+            <img src="./img/fists_logo.png" alt="Fists icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -3390,7 +3390,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Bow Smithing Texts</h2>
-            <img src="./img/bow_logo.png" alt="">
+            <img src="./img/bow_logo.png" alt="Bow icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
@@ -3547,7 +3547,7 @@
             2xl:max-w-section-width lg:px-16">
 
             <h2 class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Rifle Smithing Texts</h2>
-            <img src="./img/rifle_logo.png" alt="">
+            <img src="./img/rifle_logo.png" alt="Rifle icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <table class="place-self-start md:place-self-center bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
