--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -56,7 +56,7 @@
                 </a>
 
                 <!-- Nioh 2 Logo -->
-                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt=""></a>
+                <a href="https://liukang1080.github.io/gamewiki/nioh2/nioh2.html"><img src="https://liukang1080.github.io/gamewiki/nioh2/img/nioh2_logo_2.png" alt="Nioh 2 main logo"></a>
 
                 <!-- Navbar Buttons -->
                 <!-- hidden nav for mobile viewports -->
@@ -256,7 +256,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <!-- main image -->
-            <img fetchpriority=high src="./img/lapis_lazuli.png" alt="">
+            <img src="./img/lapis_lazuli.png" alt="Lapis Lazuli icon" fetchpriority=high>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="font-bold text-red-600">Lapis Lazuli: </span>Underworld Lapis Lazuli (also known as Gems of the 
