Added more content to armor_texts, weapon_texts, misc_texts, and hidden_skills .html files.

--- a/nioh2/tools/smithing_texts/armor_texts.html
+++ b/nioh2/tools/smithing_texts/armor_texts.html
@@ -268,7 +268,7 @@
 			<img src="./img/smithing_text_drop.png" alt="">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">How Luck affects Hidden Skills:</span> Luck does 
+                <span class="font-bold text-red-600">How Luck affects Smithing Texts:</span> Luck does 
                 <span class="font-bold text-red-600">NOT</span> affect the drop rate of Smithing Texts and Hidden Skills. Luck 
                 only affects the rarity of items that drop, NOT the chance of an item dropping. Buffs like Luck Bringer Talisman, 
                 and Soul Purge Talisman do not affect the Smithing Text and Hidden Skills drop rate. Tempering Luck+ attributes 
@@ -276,7 +276,7 @@
             </p>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="font-bold text-red-600">How Item Drop Rate affects Hidden Skills:</span> Item Drop Rate buffs 
+                <span class="font-bold text-red-600">How Item Drop Rate affects Smithing Texts:</span> Item Drop Rate buffs 
                 <span class="font-bold text-red-600">DOES</span> affect the Smithing Text and Hidden Skills drop rate. There is 
                 no active buff that we can use to manually increase our IDR at will, but we can temper on the attribute 
                 "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto the Weapon & Armor pieces, 
@@ -288,6 +288,10 @@
                 <a class="text-sky-400 hover:text-sky-600" href="https://liukang1080.github.io/gamewiki/nioh2/equipment/graces/graces.html" 
                 target="_blank" rel="noopener noreferrer">here</a>.
             </p>
+
+			<p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+				The Drop rate of Hidden Skills and Smithing Texts is the same regardless of difficulty.
+			</p>
         </div>
     </section>
 
