--- a/nioh2/tools/smithing_texts/hidden_skills.html
+++ b/nioh2/tools/smithing_texts/hidden_skills.html
@@ -285,6 +285,10 @@
                 "<span class="text-uncommon-text-color">Item Drop Rate</span>" onto the Weapon & Armor pieces, 
                 Accessories, and Soul Cores.
             </p>
+
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+				The Drop rate of Hidden Skills and Smithing Texts is the same regardless of difficulty.
+			</p>
         </div>
     </section>
 
